style.css
body {
    margin: 0;
    padding: 0;
    display: grid;
    grid-template: 1fr 4fr / 1fr 4fr;
    grid-template-areas: 
    'sidebar header'
    'sidebar main';
    height: 100vh;
}

nav img{
    width: 1rem;
    height: 1rem;
}

.top-header img:not(.pfp), .card img {
    width: 1.5rem;
    height: 1.5rem;
}

search, .user-info, .top-header, .left, .hero, .right, .item, .sidebar-title  {
    display: grid;
    align-items: center;
    grid-auto-flow: column;
}

search, .top-header, .left, .hero, .right {
    gap: 1rem;
}

.left .text {
    display: grid;
    align-items: center;
    grid-template-rows: 1rem 2rem;
    row-gap: 1rem;
}

.right {
    margin-top: 2rem;
}

.right button {
    background-color: skyblue;
    border: none;
    color: white;
    font-weight: 900;
    font-size: 1rem;
    border-radius: 1rem;
    padding: 0.6rem 1.9rem;
}

.user-info {
    gap: 2rem;
}

.sidebar {
    grid-area: sidebar;
    display: grid;
    grid-template-rows: 5rem 20rem 10rem;
    gap: 5rem;
    background-color: lightskyblue;
}


.main-nav, .utilities {
    padding-left: 1rem;
    display: grid;
    grid-template-rows: repeat(6, 50px);
    font-weight: 900;
}

.sidebar-title img {
    width: 4rem;
    height: 4rem;
}

.sidebar-title h1, .top-header h1 {
    font-size: 1.5rem;
}

.sidebar nav {
    display: grid;
}

.item {
    grid-template-columns: 2rem;
}

.sidebar-title {
    grid-template-columns: 4rem;
}

search, .user-info {
    justify-content: center;
}

.top-header, .hero {
    justify-content: space-between;
    padding: 0 3rem 0;
}

.hero {
    position: relative;
    z-index: 1;
    padding-bottom: 1rem;
    box-shadow: 0 0.5rem 10px hsl(250, 5%, 80%);
}

main {
    padding: 1.5rem 2rem;
    display: grid;
    grid-area: main;
    background-color: hsl(250, 5%, 90%);
    grid-template: 1fr 1fr / 5fr 1fr;
    grid-template-areas: 
        'projects announcements'
        'projects trending'; 
    gap: 1rem;
}

.projects, .announcements {
    display: grid;
}

.projects {
    grid-area: projects;
}

.cards {
    display: grid;
    gap: 2rem 5rem;
    grid-template-columns: repeat(auto-fit, 300px);
}

.card {
    width: 22rem;
    height: 15rem;
    background-color: white;
    border-left: 0.5rem solid orange;
    border-radius: 0.5rem;
    display: grid;
    align-items: center;
    grid-template-rows: 5rem 1rem 8rem;
    box-shadow: 5px 5px 10px hsl(250, 5%, 80%);
}

.card > * {
    margin: 0 1rem;
}

.card h3 {
    font-weight: 900;
}

.card p {
    font-size: 15px;
}

.card .buttons {
    justify-self: end;
    align-self: end;
    display: grid;
    grid-auto-flow: column;
    column-gap: 0.75rem;
}

.announcements {
    grid-area: announcements;
}

.trending {
    grid-area: trending;
}

header {
    display: grid;
    grid-area: header;
    grid-template: 5fr 10fr;
}

.pfp {
    border-radius: 4rem;
}

section > h1 {
    font-size: 1.3rem;
}

.left .pfp {
    width: 4rem;
    height: 4rem;
}

.top-header .pfp {
    width: 2rem;
    height: 2rem;
}

search input {
    height: 1.5rem;
    width: 10rem;
    transition: width 0.3s ease-in-out;
    border-radius: 1rem;
    border: none;
    background-color: hsl(250, 5%, 80%);
}

search input:focus {
    width: 300%;
    outline: 1px solid black;
}

a:link {
    text-decoration: none;
}

a:hover {
    transform: scale(1.05);
}

img:not(.pfp):hover, img:not(.pfp):focus {
    transform: scale(1.2);
    cursor: pointer;
}

button:hover {
    transform: scale(1.1);
    cursor: pointer;
}

